--- a/index.html
+++ b/index.html
@@ -30,7 +30,124 @@
         </div>
       </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section>
+        <div class="failour-section">
+          <div class="failure-img">
+            <img
+              class="failour-girl"
+              src="./images/person.png"
+              alt=""
+              srcset=""
+            />
+          </div>
+          <div class="failour-info">
+            <h1>
+              My failures of<br />
+              previous year
+            </h1>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock.
+            </p>
+            <ul>
+              <li>
+                <img src="./images/icons/check 1.png" alt="check mark" />
+                Contrary to popular belief, is not simply.
+              </li>
+              <li>
+                <img
+                  src="./images/icons/check 1.png"
+                  alt="check mark"
+                />Contrary to popular belief.
+              </li>
+              <li>
+                <img
+                  src="./images/icons/check 1.png"
+                  alt="check mark"
+                />Contrary to popular , is not simply.
+              </li>
+              <li>
+                <img
+                  src="./images/icons/check 1.png"
+                  alt="check mark"
+                />Contrary to popular belief, is not simply.
+              </li>
+              <li>
+                <img
+                  src="./images/icons/check 1.png"
+                  alt="check mark"
+                />Contrary to popular simply.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="my-plans">
+          <div>
+            <h1>My Plans</h1>
+          </div>
+          <div class="plans">
+            <div class="plan">
+              <img src="./images/icons/web.png" alt="plan one" />
+              <h4>Web Development</h4>
+              <p>I want to Start</p>
+            </div>
+            <div class="plan">
+              <img src="./images/icons/js.png" alt="plan one" />
+              <h4>JavaScript</h4>
+              <p>I want to Learn</p>
+            </div>
+            <div class="plan">
+              <img src="./images/icons/smoke.png" alt="plan one" />
+              <h4>Smoking Havit</h4>
+              <p>I want to endt</p>
+            </div>
+            <div class="plan">
+              <img src="./images/icons/ecom.png" alt="plan one" />
+              <h4>Ecommerce</h4>
+              <p>I want to develop</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="mindSet">
+          <div>
+            <h2>Awlays keep a positive mindset</h2>
+            <button class="btn-mindSet">Call Now</button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="future">
+        <h1>Future</h1>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
+        <p><small>Email : info@gmail.com</small></p>
+        <p><small>Phone : 01500 00 00 00</small></p>
+        <div class="icons">
+          <img src="./images/icons/fb.png" alt="" srcset="" />
+          <img src="./images/icons/twitter.png" alt="" srcset="" />
+          <img src="./images/icons/youtube.png" alt="" srcset="" />
+        </div>
+      </div>
+      <div class="subscription">
+        <h1>Subscription</h1>
+        <input
+          type="text"
+          name="subscription"
+          id=""
+          placeholder="Enter Your Email."
+        />
+        <button class="btn-mindSet">Subscription</button>
+      </div>
+    </footer>
   </body>
 </html>
